--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="./pages/login.html">
                         <i class="fa-regular fa-user"></i>
                     </a>
-                    <a class="heartIcon" href="./pages/coomingSoon.html">
+                    <a class="heartIcon" href="./pages/comingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
                     <a href="./pages/shopCart.html">
@@ -315,9 +315,9 @@
         <div class="footer__flex">
             <div class="footer__info">
                 <h2>INFORMACIÓN</h2>
-                <a href="./pages/coomingSoon.html"> PREGUNTAS FRECUENTES </a>
-                <a href="./pages/coomingSoon.html"> AVISOS DE PRIVACIDAD </a>
-                <a href="./pages/coomingSoon.html"> TÉRMINOS Y CONDICIONES </a>
+                <a href="./pages/comingSoon.html"> PREGUNTAS FRECUENTES </a>
+                <a href="./pages/comingSoon.html"> AVISOS DE PRIVACIDAD </a>
+                <a href="./pages/comingSoon.html"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
                     <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
@@ -328,12 +328,12 @@
 
             <div class="footer__info">
                 <h2>COMPRAS</h2>
-                <a href="./pages/coomingSoon.html">
+                <a href="./pages/comingSoon.html">
             POLÍTICA DE CAMBIOS Y DEVOLUCIONES
           </a>
-                <a href="./pages/coomingSoon.html"> FORMA DE PAGOS </a>
-                <a href="./pages/coomingSoon.html"> CENTRO DE DEVOLUCIONES </a>
-                <a href="./pages/coomingSoon.html"> RASTREA TU PEDIDO </a>
+                <a href="./pages/comingSoon.html"> FORMA DE PAGOS </a>
+                <a href="./pages/comingSoon.html"> CENTRO DE DEVOLUCIONES </a>
+                <a href="./pages/comingSoon.html"> RASTREA TU PEDIDO </a>
             </div>
         </div>
 
